Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -70,7 +70,7 @@
   "mn10:17.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kaip kūną.",
   "mn10:18-23.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas išmesto kapinėse kūno sujungtus sausgyslėmis griaučius su mėsa ir kraujais …",
   "mn10:18-23.2": "sujungtus sausgyslėmis griaučius be mėsos, raudonus nuo kraujo …",
-  "mn10:18-23.3": "griaučius, be kraujo ir mėsų, sujungtus sausgyslėmis …",
+  "mn10:18-23.3": "sujungtus sausgyslėmis griaučius, be mėsos, be kraujo …",
   "mn10:24.1": "griaučius, be jungiančių sausgyslių, išmėtytus į visas puses: vienur rankų kaulą, kitur padikaulį, vienur kulkšnies kaulą, kitur blauzdikaulį, vienur šlaunikaulį, kitur dubenkaulį, vienur šonkaulį, kitur stuburkaulį, vienur raktikaulį, kitur kaklo kaulą, vienur žandikaulį, kitur dantį, dar kitur kaukolę,",
   "mn10:24.2": "sutelkia dėmesį į šitą patį kūną:",
   "mn10:24.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
