--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -109,7 +109,7 @@
   "mn10:34.6": "supranta protą su klydimu kaip protą su klydimu;",
   "mn10:34.7": "supranta protą be klydimо kaip protą be klydimо;",
   "mn10:34.8": "supranta suvaržytą protą kaip suvaržytą protą;",
-  "mn10:34.9": "supranta išsiblaškiusį protą kaip protą išsiblaškiusį neapykanta;",
+  "mn10:34.9": "supranta išsiblaškiusį protą kaip išsiblaškiusį protą;",
   "mn10:34.10": "supranta didingą protą kaip didingą protą;",
   "mn10:34.11": "supranta nedidingą protą kaip nedidingą protą;",
   "mn10:34.12": "supranta pranokstamą protą kaip pranokstamą protą;",
