Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -117,7 +117,7 @@
   "mn10:34.14": "supranta sutelktą protą kaip sutelktą protą;",
   "mn10:34.15": "supranta nesutelktą protą kaip nesutelktą protą;",
   "mn10:34.16": "supranta išlaisvintą protą kaip išlaisvintą protą;",
-  "mn10:34.17": "supranta neišlaisvintą protą kaip neišlaisvintą protą;",
+  "mn10:34.17": "supranta neišlaisvintą protą kaip neišlaisvintą protą.",
   "mn10:35.1": "Taip, jis gyvena, kontempliuodamas protą kaip protą viduje, arba gyvena, kontempliuodamas protą kaip protą išorėje, arba gyvena, kontempliuodamas protą kaip protą ir viduje, ir išorėje.",
   "mn10:35.2": "Jis stebi prote kilimo prigimtį, arba stebi prote nykimo prigimtį, arba stebi prote ir kilimo, ir nykimo prigimtį.",
   "mn10:35.3": "Arba jame yra įtvirtinta atida: „Yra protas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
