--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -21,7 +21,7 @@
   "sn56.11:4.7": "tai yra visiškas to troškimo išblėsimas, pabaiga, atmetimas, atsisakymas, išsilaisvinimas (nuo jo), (jo) nepriėmimas.",
   "sn56.11:4.8": "O gi, vienuoliai, štai taurinanti kelio vedančio į kančios pabaigą tiesa:",
   "sn56.11:4.9": "tai štai šis taurinantis aštuonialypis kelias, o būtent:",
-  "sn56.11:4.10": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisingas susitelkimas.",
+  "sn56.11:4.10": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisinga sutelktis.",
   "sn56.11:5.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios tiesa.”",
   "sn56.11:5.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios tiesa turi būti visiškai suprasta.” ",
   "sn56.11:5.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios tiesa yra visiškai suprasta.” ",
