Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -115,7 +115,7 @@
   "mn2:21.4": "vysto energingumo nušvitimo veiksnį …",
   "mn2:21.5": "vysto džiaugsmo nušvitimo veiksnį …",
   "mn2:21.6": "vysto ramybės nušvitimo veiksnį …",
-  "mn2:21.7": "vysto susitelkimo nušvitimo veiksnį …",
+  "mn2:21.7": "vysto sutelkties nušvitimo veiksnį …",
   "mn2:21.8": "vysto lygiažiūros nušvitimo veiksnį palaikomą atsiskyrimo, aistros išblėsimo, (teršalų) liovimosi ir subrandinantį paleidimą.",
   "mn2:21.9": "Nes, vienuoliai, tam, kas taip jas vysto, nekyla ydos ir varginantis (teršalų ir jų pasekmių) karštis, kurie kiltų (to) nevystant.",
   "mn2:21.10": "Tai, vienuoliai, vadinama ydomis, kurių reikia nusikratyti vystymu.",
