--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -176,7 +176,7 @@
   "mn10:43.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:43.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:43.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus.",
-  "mn10:44.0": "Tiesų skirius",
+  "mn10:44.0": "4.5 Tiesų skirius",
   "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
   "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?",
   "mn10:44.3": "Štai, vienuoliai, vienuolis supranta kaip yra iš tikrųjų: „Tai yra kančia”, – supranta kaip yra iš tikrųjų: „Tai yra kančios šaltinis”, – supranta kaip yra iš tikrųjų: „Tai yra kančios pabaiga”, – supranta kaip yra iš tikrųjų: „Tai yra kelias į kančios pabaigą”.",
