--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -115,12 +115,12 @@
   "mn2:21.4": "vysto energingumo nušvitimo veiksnį …",
   "mn2:21.5": "vysto džiaugsmo nušvitimo veiksnį …",
   "mn2:21.6": "vysto ramybės nušvitimo veiksnį …",
-  "mn2:21.7": "vysto susitelkimo nušvitimo veiksnį …",
+  "mn2:21.7": "vysto sutelkties nušvitimo veiksnį …",
   "mn2:21.8": "vysto lygiažiūros nušvitimo veiksnį palaikomą atsiskyrimo, aistros išblėsimo, (teršalų) liovimosi ir subrandinantį paleidimą.",
   "mn2:21.9": "Nes, vienuoliai, tam, kas taip jas vysto, nekyla ydos ir varginantis (teršalų ir jų pasekmių) karštis, kurie kiltų (to) nevystant.",
   "mn2:21.10": "Tai, vienuoliai, vadinama ydomis, kurių reikia nusikratyti vystymu.",
   "mn2:22.1": "Bet kai, vienuoliai, vienuolis matymu nusikratė ydų, kurių reikia atsikratyti matymu, susilaikymu nusikratė ydų, kurių reikia atsikratyti susilaikymu, naudojimusi nusikratė ydų, kurių reikia atsikratyti naudojimusi, pakantumu nusikratė ydų, kurių reikia atsikratyti pakantumu, vengimu nusikratė ydų, kurių reikia atsikratyti vengimu, pašalinimu nusikratė ydų, kurių reikia atsikratyti pašalinimu, vystymu nusikratė ydų, kurių reikia atsikratyti vystymu, ",
-  "mn2:22.2": "apie jį, vienuoliai, sakoma: „Vienuolis gyvena pažabojęs visas ydas, nukirtęs troškimą, numetęs pančius ir teisingai perpratęs savimonę, padarė galą kančiai.”",
+  "mn2:22.2": "apie jį, vienuoliai, sakoma: „Vienuolis gyvena pažabojęs visas ydas. Jis nukirto troškimą, numetė pančius ir teisingai perpratęs savimonę, padarė galą kančiai.”",
   "mn2:22.3": "Štai ką pasakė Palaimintasis.",
   "mn2:22.4": "Patenkinti tie vienuoliai džiaugėsi Palaimintojo žodžiais."
 }
