--- a/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn56/sn56.11_translation-lt-piyadassi.json
@@ -1,5 +1,5 @@
 {
-  "sn56.11:0.1": "Surištų suttų rinkinys 56",
+  "sn56.11:0.1": "Pagal temą susijusių suttų rinkinys 56",
   "sn56.11:0.2": "2. Dhammos rato įsukimo skyrius",
   "sn56.11:0.3": "11. Dhammos rato įsukimas",
   "sn56.11:1.1": "Vienąsyk, Palaimintasis buvo apsistojęs Elnių parke, Išminčių vietovėje netoli Varanasio.",
@@ -10,7 +10,7 @@
   "sn56.11:2.4": "Šių gi, vienuoliai, dviejų kraštutinumų išvengęs, Tathagata suvokė vidurio kelią, kuris atvėrė akis, suteikė žinojimą, atvedė prie ramybės, tiesioginio pažinimo, tobulo nušvitimo, Nibbanos.",
   "sn56.11:3.1": "Ir kas tai, vienuoliai, per Tathagatos suvoktas vidurio kelias, kuris atvėrė akis, suteikė žinojimą, atvedė prie ramybės, tiesioginio pažinimo, tobulo nušvitimo, Nibbanos?",
   "sn56.11:3.2": "Tai štai šis taurinantis aštuonialypis kelias, o būtent:",
-  "sn56.11:3.3": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisingas susitelkimas.",
+  "sn56.11:3.3": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisinga sutelktis.",
   "sn56.11:3.4": "Štai toks, vienuoliai, yra Tathagatos suvoktas vidurio kelias, kuris atvėrė akis, suteikė žinojimą, atvedė prie ramybės, tiesioginio pažinimo, tobulo nušvitimo, Nibbanos.",
   "sn56.11:4.1": "O gi, vienuoliai, štai taurinanti kančios tiesa:",
   "sn56.11:4.2": "ir gimimas yra kančia, ir senėjimas yra kančia, ir ligos - kančia, ir mirtis - kančia, ir susidūrimas su tuo, kas nemiela, - kančia, ir išsiskyrimas su tuo, kas miela, - kančia, ir norimo negavimas - kančia, trumpiau, penki sandai, paveikti prisirišimo, yra kančia.",
@@ -21,7 +21,7 @@
   "sn56.11:4.7": "tai yra visiškas to troškimo išblėsimas, pabaiga, atmetimas, atsisakymas, išsilaisvinimas (nuo jo), (jo) nepriėmimas.",
   "sn56.11:4.8": "O gi, vienuoliai, štai taurinanti kelio vedančio į kančios pabaigą tiesa:",
   "sn56.11:4.9": "tai štai šis taurinantis aštuonialypis kelias, o būtent:",
-  "sn56.11:4.10": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisingas susitelkimas.",
+  "sn56.11:4.10": "teisingas požiūris, teisingas ketinimas, teisinga kalba, teisingas veiksmas, teisingas pragyvenimo šaltinis, teisinga pastanga, teisinga atida ir teisinga sutelktis.",
   "sn56.11:5.1": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Tai yra taurinanti kančios tiesa.”",
   "sn56.11:5.2": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios tiesa turi būti visiškai suprasta.” ",
   "sn56.11:5.3": "Vienuoliai, apie anksčiau negirdėtus dalykus manyje atsirado toks matymas, supratimas, išmintis, žinojimas ir šviesa: „Ta gi taurinanti kančios tiesa yra visiškai suprasta.” ",
