--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1368,9 +1368,9 @@
   "pli-tv-kd2:34.13.5": "If they do ask the newly arrived monks about it, and they change their view, and then do the observance-day procedure together, there’s no offense. ",
   "pli-tv-kd2:35.1.0": "36. The section on “you shouldn’t go” ",
   "pli-tv-kd2:35.1.1": "“On the observance day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd2:35.1.2": "On an observance day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd2:35.1.2": "On the observance day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.1.3": "On an observance day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd2:35.2.1": "On an observance day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd2:35.2.1": "On the observance day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.2.2": "On an observance day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd2:35.2.3": "On an observance day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd2:35.3.1": "On an observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
