--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1369,13 +1369,13 @@
   "pli-tv-kd2:35.1.0": "36. The section on “you shouldn’t go” ",
   "pli-tv-kd2:35.1.1": "“On the observance day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.1.2": "On the observance day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd2:35.1.3": "On an observance day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd2:35.1.3": "On the observance day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.2.1": "On the observance day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd2:35.2.2": "On an observance day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd2:35.2.3": "On an observance day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd2:35.3.1": "On an observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd2:35.3.2": "On an observance day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd2:35.3.3": "On an observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd2:35.2.2": "On the observance day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd2:35.2.3": "On the observance day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd2:35.3.1": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd2:35.3.2": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd2:35.3.3": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.4.1": "“On an observance day you shouldn’t go from a monastery with monks to a monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd2:35.4.2": "On an observance day you shouldn’t go from a monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd2:35.4.3": "On an observance day you shouldn’t go from a monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
