--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1384,11 +1384,11 @@
   "pli-tv-kd2:35.4.6": "On the observance day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.4.7": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.4.8": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd2:35.4.9": "On an observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd2:35.4.9": "On the observance day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd2:35.5.0": "37. The section on “you may go” ",
-  "pli-tv-kd2:35.5.1": "“On an observance day you may go from a monastery with monks to a monastery with monks who belong to the same Buddhist sect if you know ",
-  "pli-tv-kd2:35.5.2": "you’ll be able to get there on the same day. ",
-  "pli-tv-kd2:35.5.3": "On an observance day you may go from a monastery with monks to a non-monastery with monks … ",
+  "pli-tv-kd2:35.5.1": "“On the observance day you may go from a monastery with monks to a monastery with monks who belong to the same Buddhist sect if you know ",
+  "pli-tv-kd2:35.5.2": "you’ll get there on the same day. ",
+  "pli-tv-kd2:35.5.3": "On the observance day you may go from a monastery with monks to a non-monastery with monks … ",
   "pli-tv-kd2:35.5.4": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect if you know ",
   "pli-tv-kd2:35.5.5": "you’ll be able to get there on the same day. ",
   "pli-tv-kd2:35.5.6": "On an observance day you may go from a non-monastery with monks to a monastery with monks … ",
