--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1423,7 +1423,7 @@
   "pli-tv-kd2:36.3.8": "with a murderer of a perfected one, ",
   "pli-tv-kd2:36.3.9": "with one who has raped a nun, ",
   "pli-tv-kd2:36.3.10": "with one has caused a schism in the Sangha, ",
-  "pli-tv-kd2:36.3.11": "with one who has caused a Buddha to bleed, ",
+  "pli-tv-kd2:36.3.11": "with one who has caused the Buddha to bleed, ",
   "pli-tv-kd2:36.3.12": "or with a hermaphrodite seated in the gathering. ",
   "pli-tv-kd2:36.3.13": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:36.4.1": "“You shouldn’t do the observance-day procedure with a passed-on purity that has expired, except if the gathering is still seated together. ",
