--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -823,8 +823,8 @@
   "pli-tv-kd4:13.1.65": "If they do ask the newly arrived monks about it, and they change their view, but then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.66": "If they do ask the newly arrived monks about it, and they change their view, and then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.67.0": "18. The section on “you shouldn’t go” ",
-  "pli-tv-kd4:13.1.67.1": "“On an invitation day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd4:13.1.68": "On an invitation day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd4:13.1.67.1": "“On the invitation day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd4:13.1.68": "On the invitation day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.69": "On an invitation day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd4:13.1.70": "On an invitation day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd4:13.1.71": "On an invitation day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
