--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -825,9 +825,9 @@
   "pli-tv-kd4:13.1.67.0": "18. The section on “you shouldn’t go” ",
   "pli-tv-kd4:13.1.67.1": "“On the invitation day you shouldn’t go from a monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.68": "On the invitation day you shouldn’t go from a monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd4:13.1.69": "On an invitation day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd4:13.1.70": "On an invitation day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd4:13.1.71": "On an invitation day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd4:13.1.69": "On the invitation day you shouldn’t go from a monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd4:13.1.70": "On the invitation day you shouldn’t go from a non-monastery with monks to a monastery without monks, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd4:13.1.71": "On the invitation day you shouldn’t go from a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.72": "On an invitation day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd4:13.1.73": "On an invitation day you shouldn’t go from a monastery or a non-monastery with monks to a monastery without monks, except if you go with a sangha or except if there are dangers. ",
   "pli-tv-kd4:13.1.74": "On an invitation day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery without monks, except if you go with a sangha or except if there are dangers. ",
