--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -838,11 +838,11 @@
   "pli-tv-kd4:13.1.79": "On the invitation day you shouldn’t go from a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.80": "On the invitation day you shouldn’t go from a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.81": "On the invitation day you shouldn’t go from a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
-  "pli-tv-kd4:13.1.82": "On an invitation day you shouldn’t go from a monastery or a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd4:13.1.83": "On an invitation day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
-  "pli-tv-kd4:13.1.84": "On an invitation day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or except if there are dangers. ",
+  "pli-tv-kd4:13.1.82": "On the invitation day you shouldn’t go from a monastery or a non-monastery with monks to a monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd4:13.1.83": "On the invitation day you shouldn’t go from a monastery or a non-monastery with monks to a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
+  "pli-tv-kd4:13.1.84": "On the invitation day you shouldn’t go from a monastery or a non-monastery with monks to a monastery or a non-monastery with monks who belong to a different Buddhist sect, except if you go with a sangha or there are dangers. ",
   "pli-tv-kd4:13.1.85.0": "19. The section on “you may go” ",
-  "pli-tv-kd4:13.1.85.1": "“On an invitation day you may go from a monastery with monks to a monastery with monks who belong to the same Buddhist sect, if you know you’ll be able to get there on the same day. ",
+  "pli-tv-kd4:13.1.85.1": "“On the invitation day you may go from a monastery with monks to a monastery with monks who belong to the same Buddhist sect, if you know you’ll get there on the same day. ",
   "pli-tv-kd4:13.1.86": "On an invitation day you may go from a monastery with monks to a non-monastery with monks … ",
   "pli-tv-kd4:13.1.87": "to a monastery or a non-monastery with monks who belong to the same Buddhist sect, if you know you’ll be able to get there on the same day. ",
   "pli-tv-kd4:13.1.88": "On an invitation day you may go from a non-monastery with monks to a monastery with monks … ",
