Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -875,7 +875,7 @@
   "pli-tv-kd4:14.3.8": "with a murderer of a perfected one, ",
   "pli-tv-kd4:14.3.9": "with one who has raped a nun, ",
   "pli-tv-kd4:14.3.10": "with one has caused a schism in the Sangha, ",
-  "pli-tv-kd4:14.3.11": "with one who has caused a Buddha to bleed, ",
+  "pli-tv-kd4:14.3.11": "with one who has caused the Buddha to bleed, ",
   "pli-tv-kd4:14.3.12": "or with a hermaphrodite seated in the gathering. ",
   "pli-tv-kd4:14.3.13": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:14.4.1": "“You shouldn’t do the invitation procedure with a passed-on invitation that has expired, except if the gathering is still seated together. ",
