--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
@@ -45,7 +45,7 @@
   "thig13.1:11.1": "Wie die blank gescheuerte Schale einer Meeresschnecke ",
   "thig13.1:11.2": "war einst mein Hals, so hübsch; ",
   "thig13.1:11.3": "jetzt, alt geworden, ist er krumm und gebeugt – ",
-  "thig13.1:11.4": "das Wort des Wahrhaftigen hat sich bestätigt. ",
+  "thig13.1:11.4": "das Wort des Wahrhaftigen trifft zu. ",
   "thig13.1:12.1": "Wie zwei gerundete Stangen ",
   "thig13.1:12.2": "waren meine Arme einst, so hübsch; ",
   "thig13.1:12.3": "jetzt, alt geworden, hängen sie herab wie ein Trompetenblumenbaum – ",
