--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
@@ -49,7 +49,7 @@
   "thig13.1:12.1": "Wie zwei gerundete Stangen ",
   "thig13.1:12.2": "waren meine Arme einst, so hübsch; ",
   "thig13.1:12.3": "jetzt, alt geworden, hängen sie herab wie ein Trompetenblumenbaum – ",
-  "thig13.1:12.4": "das Wort des Wahrhaftigen hat sich bestätigt. ",
+  "thig13.1:12.4": "das Wort des Wahrhaftigen trifft zu. ",
   "thig13.1:13.1": "Geschmückt mit lieblichen goldenen Ringen, ",
   "thig13.1:13.2": "das waren einst meine Hände, so hübsch; ",
   "thig13.1:13.3": "jetzt, alt geworden, gleichen sie roten Rettichen – ",
