--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
@@ -77,5 +77,5 @@
   "thig13.1:19.1": "So war einst dieser Knochensack, ",
   "thig13.1:19.2": "doch jetzt ist er verdorrt, ein Ort der Schmerzen; ",
   "thig13.1:19.3": "wie ein verfallendes Haus, von dem der Putz abblättert – ",
-  "thig13.1:19.4": "das Wort des Wahrhaftigen hat sich bestätigt. "
+  "thig13.1:19.4": "das Wort des Wahrhaftigen trifft zu. "
 }
