--- a/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig13.1_translation-de-sabbamitta.json
@@ -75,7 +75,7 @@
   "thig13.1:18.3": "jetzt, alt geworden, sind sie rissig und runzelig – ",
   "thig13.1:18.4": "das Wort des Wahrhaftigen trifft zu. ",
   "thig13.1:19.1": "So war einst dieser Knochensack, ",
-  "thig13.1:19.2": "doch jetzt ist er verdorrt, ein Ort der Schmerzen; ",
+  "thig13.1:19.2": "doch jetzt ist er verwelkt, ein Ort der Schmerzen; ",
   "thig13.1:19.3": "wie ein verfallendes Haus, von dem der Putz abblättert – ",
   "thig13.1:19.4": "das Wort des Wahrhaftigen trifft zu. "
 }
