--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -1,4 +1,5 @@
 {
   "mn7:0.1": "Vidutinio ilgio suttų rinkinys 7",
-  "mn7:0.2": "Palyginimas su drobe"
+  "mn7:0.2": "Palyginimas su drobe",
+  "mn7:1.1": "Taip aš girdėjau."
 }
