--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -3,5 +3,6 @@
   "mn7:0.2": "Palyginimas su drobe",
   "mn7:1.1": "Taip aš girdėjau.",
   "mn7:1.2": "Kartą Palaimintasis buvo apsistojęs Anathapindikos vienuolyne Džetos girioje netoli Savatthi.",
-  "mn7:1.3": "Ten gi Palaimintasis kreipėsi į vienuolius:"
+  "mn7:1.3": "Ten gi Palaimintasis kreipėsi į vienuolius:",
+  "mn7:1.4": "„Vienuoliai!”"
 }
