--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -5,5 +5,6 @@
   "mn7:1.2": "Kartą Palaimintasis buvo apsistojęs Anathapindikos vienuolyne Džetos girioje netoli Savatthi.",
   "mn7:1.3": "Ten gi Palaimintasis kreipėsi į vienuolius:",
   "mn7:1.4": "„Vienuoliai!”",
-  "mn7:1.5": "„Taip, Garbusis,” – atsakė Palaimintajam tie vienuoliai.  "
+  "mn7:1.5": "„Taip, Garbusis,” – atsakė Palaimintajam tie vienuoliai.  ",
+  "mn7:1.6": "Palaimintasis štai ką pasakė:"
 }
