Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -668,6 +668,7 @@
   "sn-name:2040.sn56.37": "Das Gleichnis von der Sonne (1) ",
   "sn-name:2041.sn56.38": "Das Gleichnis von der Sonne (2) ",
   "sn-name:2042.sn56.39": "Ein Grenzpfosten ",
+  "sn-name:2043.sn56.40": "Auf ein Streitgespräch aus ",
   "sn-name:2044.sn56-papatavagga": "Eine Klippe ",
   "sn-name:2050.sn56.46": "Dunkelheit ",
   "sn-name:2051.sn56.47": "Ein Joch mit einer Öffnung (1) ",
