--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -9,5 +9,6 @@
   "mn7:1.6": "Palaimintasis štai ką pasakė:",
   "mn7:2.1": "Įsivaizduokite, vienuoliai, suterštą, dėmėtą drobę.",
   "mn7:2.2": "Kad ir  į kokiais dažai dažytojas ją apdorotų – mėlynais, geltonais, raudonais ar vyšniniais – ji bus prastai nusidažiusi, bus nešvarios spalvos.",
-  "mn7:2.3": "Kokia yra to priežastis?"
+  "mn7:2.3": "Kokia yra to priežastis?",
+  "mn7:2.4": "Taip, vienuoliai, yra dėl drobės nešvarumo."
 }
