--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1430,6 +1430,7 @@
   "pli-tv-kd2:36.4.2": "You shouldn’t do the observance-day procedure on a non-observance day, except for the purpose of the unity of the Sangha.” ",
   "pli-tv-kd2:36.4.3": "The third section for recitation is finished. ",
   "pli-tv-kd2:36.4.4": "The second chapter on the observance day is finished. ",
+  "pli-tv-kd2:36.4.5": "This is the summary: ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
