Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1431,6 +1431,7 @@
   "pli-tv-kd2:36.4.3": "The third section for recitation is finished. ",
   "pli-tv-kd2:36.4.4": "The second chapter on the observance day is finished. ",
   "pli-tv-kd2:36.4.5": "This is the summary: ",
+  "pli-tv-kd2:36.4.6": "“Ascetics of other religions, and Bimbisāra, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
