--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1433,6 +1433,7 @@
   "pli-tv-kd2:36.4.5": "This is the summary: ",
   "pli-tv-kd2:36.4.6": "“Ascetics of other religions, and Bimbisāra, ",
   "pli-tv-kd2:36.4.7": "To assemble, silent; ",
+  "pli-tv-kd2:36.4.8": "Teaching, private, the Monastic Code, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
