--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1437,6 +1437,7 @@
   "pli-tv-kd2:36.4.9": "Daily, then once. ",
   "pli-tv-kd2:36.4.10": "According to assembly, united, ",
   "pli-tv-kd2:36.4.11": "Complete assembly, and Maddakucchi; ",
+  "pli-tv-kd2:36.4.12": "Monastery zone, large, with river, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
