Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1439,6 +1439,7 @@
   "pli-tv-kd2:36.4.11": "Complete assembly, and Maddakucchi; ",
   "pli-tv-kd2:36.4.12": "Monastery zone, large, with river, ",
   "pli-tv-kd2:36.4.13": "One after another, two, and small. ",
+  "pli-tv-kd2:36.4.14": "Juniors, and just in Rājagaha, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
