Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -11,5 +11,6 @@
   "mn7:2.2": "Kad ir  į kokiais dažai dažytojas ją apdorotų – mėlynais, geltonais, raudonais ar vyšniniais – ji bus prastai nusidažiusi, bus nešvarios spalvos.",
   "mn7:2.3": "Kokia yra to priežastis?",
   "mn7:2.4": "Taip, vienuoliai, yra dėl drobės nešvarumo.",
-  "mn7:2.5": "Lygiai gi, vienuoliai, taip protas yra suterštas, lauktinas (atgimimas) blogoje vietoje."
+  "mn7:2.5": "Lygiai gi, vienuoliai, taip protas yra suterštas, lauktinas (atgimimas) blogoje vietoje.",
+  "mn7:2.6": "Įsivaizduokite, vienuoliai, švarią, išbalintą drobę."
 }
