Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1441,7 +1441,7 @@
   "pli-tv-kd2:36.4.13": "One after another, two, and small. ",
   "pli-tv-kd2:36.4.14": "Juniors, and just in Rājagaha, ",
   "pli-tv-kd2:36.4.15": "May-not-stay-apart zone; ",
-  "pli-tv-kd2:36.4.16": "May designate the first monastery zone, ",
+  "pli-tv-kd2:36.4.16": "May designate, the first monastery zone, ",
   "pli-tv-kd2:36.4.17": "The latter monastery zone, may abolish. ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
