Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -14,5 +14,6 @@
   "mn7:2.5": "Lygiai gi, vienuoliai, taip protas yra suterštas, lauktinas (atgimimas) blogoje vietoje.",
   "mn7:2.6": "Įsivaizduokite, vienuoliai, švarią, išbalintą drobę.",
   "mn7:2.7": "Kad ir  į kokiais dažais dažytojas ją apdorotų – mėlynais, geltonais, raudonais ar vyšniniais – ji bus gerai nusidažiusi, bus švarios spalvos.",
-  "mn7:2.8": "Kokia yra to priežastis?"
+  "mn7:2.8": "Kokia yra to priežastis?",
+  "mn7:2.9": "Taip, vienuoliai, yra dėl drobės švarumo."
 }
