Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -17,5 +17,5 @@
   "mn7:2.8": "Kokia yra to priežastis?",
   "mn7:2.9": "Taip, vienuoliai, yra dėl drobės švarumo.",
   "mn7:2.10": "Lygiai gi, vienuoliai, taip, kai protas yra nesuterštas, lauktinas (atgimimas) geroje vietoje.",
-  "mn7:3.1": "Ir kokie, vienuoliai, yra proto teršalai?"
+  "mn7:3.1": "Ir kokie, vienuoliai, yra proto taršalai?"
 }
