Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -522,5 +522,5 @@
   "dn34:2.1.74": "‘I have some minor arisen ailment. It is suitable to take a nap. Why don't I take a nap.’",
   "dn34:2.1.75": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
   "dn34:2.1.76": "This is the seventh bases of laziness.",
-  "dn34:2.1.77": "Or alternatively, a monk has only recently gotten better from being sick."
+  "dn34:2.1.77": "Or alternatively, a monk has only recently gotten better from being sick,"
 }
