Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -524,5 +524,6 @@
   "dn34:2.1.76": "This is the seventh bases of laziness.",
   "dn34:2.1.77": "Or alternatively, a monk has only recently gotten better from being sick,",
   "dn34:2.1.78": "and he thinks:",
-  "dn34:2.1.79": "‘I have only recently gotten better from being sick."
+  "dn34:2.1.79": "‘I have only recently gotten better from being sick.",
+  "dn34:2.1.80": "Because of this, my body is weak and unfit for work. Why don't I take a nap.’"
 }
