Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -529,5 +529,6 @@
   "dn34:2.1.81": "So he takes a nap and doesn't kindle energy for attaining the unattained, acquiring the unacquired, or seeing for himself that which he has not seen for himself.",
   "dn34:2.1.82": "This is the eighth bases of laziness.",
   "dn34:2.1.83": "These are the eight things that lead to backsliding.",
-  "dn34:2.1.84": "What are the eight things that lead to accomplishment?"
+  "dn34:2.1.84": "What are the eight things that lead to accomplishment?",
+  "dn34:2.1.85": "The eight bases of exertion."
 }
