Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -531,5 +531,6 @@
   "dn34:2.1.83": "These are the eight things that lead to backsliding.",
   "dn34:2.1.84": "What are the eight things that lead to accomplishment?",
   "dn34:2.1.85": "The eight bases of exertion.",
-  "dn34:2.1.86": "Here, there is work to be done by a monk, and he thinks:"
+  "dn34:2.1.86": "Here, there is work to be done by a monk, and he thinks:",
+  "dn34:2.1.87": "‘I have work to do. When doing the work, it will not be easy for me to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’"
 }
