Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -543,5 +543,6 @@
   "dn34:2.1.95": "and he thinks:",
   "dn34:2.1.96": "‘I have a trip to take. When taking the trip, it will not be easy for me to attend to the Buddha's instruction. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
   "dn34:2.1.97": "This is the third bases of exertion.",
-  "dn34:2.1.98": "Or alternatively, a monk has completed a trip,"
+  "dn34:2.1.98": "Or alternatively, a monk has completed a trip,",
+  "dn34:2.1.99": "and he thinks:"
 }
