Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -557,5 +557,6 @@
   "dn34:2.1.109": "‘Because of this, my body is strong and fit for work. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ...",
   "dn34:2.1.110": "This is the sixth bases of exertion.",
   "dn34:2.1.111": "Or alternatively, a monk has some minor arisen ailment,",
-  "dn34:2.1.112": "and he thinks:"
+  "dn34:2.1.112": "and he thinks:",
+  "dn34:2.1.113": "‘I have some minor arisen ailment. It is possible that my ailment might get worse. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’ ..."
 }
