Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -563,5 +563,6 @@
   "dn34:2.1.115": "Or alternatively, a monk has only recently gotten better from being sick,",
   "dn34:2.1.116": "and he thinks:",
   "dn34:2.1.117": "‘I have only recently gotten better from being sick. It is possible that my ailment might return. Why don't I kindle energy for attaining the unattained, acquiring the unacquired, and for seeing for myself that which I have not seen for myself.’",
-  "dn34:2.1.118": "So he kindles energy for attaining the unattained, acquiring the unacquired, and for seeing for himself that which he has not seen for himself.’"
+  "dn34:2.1.118": "So he kindles energy for attaining the unattained, acquiring the unacquired, and for seeing for himself that which he has not seen for himself.’",
+  "dn34:2.1.119": "eighth"
 }
