Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -567,5 +567,6 @@
   "dn34:2.1.119": "This is the eighth bases of exertion.",
   "dn34:2.1.120": "These are the eight things that lead to accomplishment.",
   "dn34:2.1.121": "What are the eight things that are hard to penetrate?",
-  "dn34:2.1.122": "The eight inopportune, inconvenient times for living the holy life."
+  "dn34:2.1.122": "The eight inopportune, inconvenient times for living the holy life.",
+  "dn34:2.1.123": "Here, a Such-Attained One, a Worthy One, a Fully Enlightened Buddha has arisen in the world. And he teaches the Dhamma that leads to peace, that leads to Nibbāna, that goes to full enlightenment, that is declared by those Well Gone."
 }
