Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -574,5 +574,6 @@
   "dn34:2.1.126": "Or alternatively, a Such-Attained One, a Worthy One, a Fully Enlightened Buddha has arisen in the world. And he teaches the Dhamma that leads to peace, that leads to Nibbāna, that goes to full enlightenment, that is declared by those Well Gone.",
   "dn34:2.1.127": "But this person is reborn in the womb of an animal.",
   "dn34:2.1.128": "This is the second inopportune, inconvenient occasion for living the holy life.",
-  "dn34:2.1.129": "Or alternatively ..."
+  "dn34:2.1.129": "Or alternatively ...",
+  "dn34:2.1.130": "he is reborn in the realm of hungry ghosts."
 }
