Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -575,5 +575,6 @@
   "dn34:2.1.127": "But this person is reborn in the womb of an animal.",
   "dn34:2.1.128": "This is the second inopportune, inconvenient occasion for living the holy life.",
   "dn34:2.1.129": "Or alternatively ...",
-  "dn34:2.1.130": "he is reborn in the realm of hungry ghosts."
+  "dn34:2.1.130": "he is reborn in the realm of hungry ghosts.",
+  "dn34:2.1.131": "This is the third inopportune, inconvenient occasion for living the holy life."
 }
