Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -65,7 +65,7 @@
   "mn2:10.10": "Šie yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas.",
   "mn2:10.11": "Dėl to, kad jis nekreipia dėmesio ten, kur dėmesys nekreiptinas ir kreipia dėmesį ten, kur dėmesys kreiptinas, jam nekyla dar nekilusios ydos, o iškilusių ydų nusikratoma.",
   "mn2:11.1": "Jis nuodugniai įsidėmi: „Tai yra kančia”,  nuodugniai įsidėmi: „Tai yra kančios šaltinis”, nuodugniai įsidėmi: „Tai yra kančios pabaiga”, nuodugniai įsidėmi: „Tai yra kelias į kančios pabaigą”.",
-  "mn2:11.2": "Taip nuodugniai kreipiantis dėmesį  nusikrato trejų pančių:",
+  "mn2:11.2": "Taip nuodugniai kreipiantis dėmesį  atsikrato trejų pančių:",
   "mn2:11.3": "tapatumo pažiūros, abejonių ir bet kokio prisirišimo prie ritualų ir apeigų.",
   "mn2:11.4": "Tai, vienuoliai, vadinama ydomis, kurių reikia atsikratyti matymu.",
   "mn2:12.0": "2. Ydos, kurių reikia atsikratyti  susilaikymu",
