Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -580,5 +580,6 @@
   "dn34:2.1.132": "Or alternatively ...",
   "dn34:2.1.133": "he is reborn in the retinue of angels who live long lives.",
   "dn34:2.1.134": "This is the fourth inopportune, inconvenient occasion for living the holy life.",
-  "dn34:2.1.135": "Or alternatively ..."
+  "dn34:2.1.135": "Or alternatively ...",
+  "dn34:2.1.136": "he is reborn among close minded, ignorant people in hard to reach places where there is no access to monks, nuns, laymen, or laywomen"
 }
