Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -23,5 +23,6 @@
   "mn7:4.2": "supratęs, kad piktavališkumas yra proto taršalas,",
   "mn7:4.3": "atsikrato jo;",
   "mn7:4.4": "supratęs, kad pyktis yra proto teršalas,",
-  "mn7:4.5": "atsikrato jo;"
+  "mn7:4.5": "atsikrato jo;",
+  "mn7:4.6": "supratęs, kad pagieža yra proto teršalas,"
 }
