Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -28,5 +28,8 @@
   "mn7:4.7": "atsikrato jo;",
   "mn7:4.8": "supratęs, kad panieka yra proto teršalas,",
   "mn7:4.9": "atsikrato jo;",
-  "mn7:4.10": "supratęs, kad įžulumas yra proto teršalas,"
+  "mn7:4.10": "supratęs, kad įžulumas yra proto teršalas,",
+  "mn7:4.11": "atsikrato jo;",
+  "mn7:4.12": "supratęs, kad pavydas yra proto teršalas,",
+  "mn7:4.13": "atsikrato jo;"
 }
