--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -33,5 +33,6 @@
   "mn7:4.12": "supratęs, kad pavydas yra proto teršalas,",
   "mn7:4.13": "atsikrato jo;",
   "mn7:4.14": "supratęs, kad savininkiškumas yra proto teršalas,",
-  "mn7:4.15": "atsikrato jo;"
+  "mn7:4.15": "atsikrato jo;",
+  "mn7:4.16": "supratęs, kad apgaulingumas yra proto teršalas,"
 }
