Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -38,5 +38,7 @@
   "mn7:4.17": "atsikrato jo;",
   "mn7:4.18": "supratęs, kad veidmainystė yra proto teršalas,",
   "mn7:4.19": "atsikrato jo;",
-  "mn7:4.20": "supratęs, kad užsispirimas yra proto teršalas,"
+  "mn7:4.20": "supratęs, kad užsispirimas yra proto teršalas,",
+  "mn7:4.21": "atsikrato jo;",
+  "mn7:4.22": "supratęs, kad kietasprandiškumas yra proto teršalas,"
 }
