Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -40,5 +40,7 @@
   "mn7:4.19": "atsikrato jo;",
   "mn7:4.20": "supratęs, kad užsispirimas yra proto teršalas,",
   "mn7:4.21": "atsikrato jo;",
-  "mn7:4.22": "supratęs, kad kietasprandiškumas yra proto teršalas,"
+  "mn7:4.22": "supratęs, kad kietasprandiškumas yra proto teršalas,",
+  "mn7:4.23": "atsikrato jo;",
+  "mn7:4.24": "supratęs, kad savimana yra proto teršalas,"
 }
