Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -44,5 +44,7 @@
   "mn7:4.23": "atsikrato jo;",
   "mn7:4.24": "supratęs, kad savimana yra proto teršalas,",
   "mn7:4.25": "atsikrato jo;",
-  "mn7:4.26": "supratęs, kad puikybė yra proto teršalas,"
+  "mn7:4.26": "supratęs, kad puikybė yra proto teršalas,",
+  "mn7:4.27": "atsikrato jo;",
+  "mn7:4.28": "supratęs, kad akiplėšiškumas yra proto teršalas,"
 }
