Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -54,5 +54,5 @@
   "mn7:5.2": "atsikratė to taršalo;",
   "mn7:5.3": "supratęs, kad piktavališkumas yra proto taršalas …",
   "mn7:5.30": "supratęs, kad nerūpestingumas yra proto teršalas,",
-  "mn7:5.31": "atsikratė to taršalo."
+  "mn7:5.31": "atsikratė to taršalo,"
 }
