Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -55,5 +55,6 @@
   "mn7:5.3": "supratęs, kad piktavališkumas yra proto taršalas …",
   "mn7:5.30": "supratęs, kad nerūpestingumas yra proto teršalas,",
   "mn7:5.31": "atsikratė to taršalo,",
-  "mn7:5.32": "jis turi (tokį) patirtimi grįstą pasitikėjimą Buda:"
+  "mn7:5.32": "jis turi (tokį) patirtimi grįstą pasitikėjimą Buda:",
+  "mn7:5.33": "„Šis Palaimintasis yra arahantas, tobulai nušvitęs, įgijęs žinojimą ir gerą elgesį, gerai žengęs, žinantis pasaulį, neprilygstamas tramdytinų žmonių ugdytojas, dievybių ir žmonių mokytojas, nušvitęs, palaimintas.”"
 }
