Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -100,7 +100,7 @@
   "an7.64:20.2": "jie patys yra brangiausi.",
   "an7.64:20.3": "Supykę nusižudo įvairiais būdais,",
   "an7.64:20.4": "pametę galvą dėl visokiausių dalykų.",
-  "an7.64:21.1": "Peilių jie nusižudo,",
+  "an7.64:21.1": "Peiliu jie nusižudo,",
   "an7.64:21.2": "pamišę praryja nuodų,",
   "an7.64:21.3": "jie miršta pasikorę,",
   "an7.64:21.4": "nušokę nuo kalno ar skardžio.",
