Translations by Piyadassii to translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/an/an7/an7.64_translation-lt-piyadassi.json
@@ -51,7 +51,7 @@
   "an7.64:7.6": "Blogai pasielgęs, blogai kalbėjęs …",
   "an7.64:7.7": "po kūno žūties, po mirties atgimsta pragaištingoje, blogoje vietoje, kančių pasaulyje, pragare, jis yra pikčiurna.",
   "an7.64:7.8": "Tai, vienuoliai, yra septintas dalykas atsitinkantis pikčiurnai vyrui ar moteriai, kuris pamaloną ir padeda priešui.",
-  "an7.64:8.1": "Šie, vienuoliai, yra septyni priešą pamaloninantys, priešui padedantys dalykai atsitinkantis pikčiurnai vyrui ar moteriai.",
+  "an7.64:8.1": "Šie, vienuoliai, yra septyni dalykai atsitinkantys pikčiurnai vyrui ar moteriai, kurie pamaloną ir padeda priešui.",
   "an7.64:9.1": "Pikčiurna yra negražus",
   "an7.64:9.2": "ir miega jis blogai.",
   "an7.64:9.3": "Pasiėmęs kažką, (ką jis mano esą) naudingą,",
