Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -7,7 +7,7 @@
   "mn2:1.4": "„Vienuoliai!”",
   "mn2:1.5": "„Taip, Garbusis,”  – atsakė Palaimintajam tie vienuoliai.  ",
   "mn2:1.6": "Palaimintasis štai ką pasakė:",
-  "mn2:2.1": "„Vienuoliai, aš jus mokysiu nuoseklaus būdo pažaboti visas ydas.",
+  "mn2:2.1": "„Vienuoliai, aš jus nuosekliu metodu mokysiu pažaboti visas ydas.",
   "mn2:2.2": "To klausykite, sutelkite visą dėmesį, aš kalbėsiu.”",
   "mn2:2.3": "„Taip, Garbusis,”  – atsakė Palaimintajam tie vienuoliai.  ",
   "mn2:2.4": "Palaimintasis štai ką pasakė:",
