Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -108,7 +108,7 @@
   "mn1:26.3": "એ શેના માટે?",
   "mn1:26.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ નથી, કહું છું.",
   "mn1:26.5": "સામાન્ય માણસની પ્રથમ પરિચ્છેદની પૂર્ણતા.",
-  "mn1:27.1": "ભિક્ષુઓ, જે ભિક્ષુ શિક્ષાર્થી હોય છે, જેણે ધ્યેય પરિપૂર્ણ નથી કર્યો પણ જેને બંધનથી મુક્તીના સર્વશ્રેષ્ઠ આશ્રયની આકાંશા હોય છે એ સીધી રીતે પૃથ્વીને પૃથ્વી જાણે છે; ",
+  "mn1:27.1": "ભિક્ષુઓ, જે ભિક્ષુ શિક્ષાર્થી હોય છે, જેણે ધ્યેય પરિપૂર્ણ નથી કર્યો પણ જેને બંધનથી મુક્તીના સર્વશ્રેષ્ઠ આશ્રયની આકાંશા હોય છે એ સીધી રીતે પૃથ્વીને પૃથ્વી તરીકે જાણે છે; ",
   "mn1:27.2": "પરંતુ પૃથ્વીને પૃથ્વી જાણી એમણે પોતાને પૃથ્વી ના માનવું જોઇએ, પોતાને પૃથ્વીમાં ના માનવું જોઇએ, પોતાને પૃથ્વીથી ના માનવું જોઇએ, પૃથ્વી મારી છે એવું ના માનવું જોઇએ, પૃથ્વીમાં આનંદ ના લેવો જોઇએ.",
   "mn1:27.3": "એ શેના માટે?",
   "mn1:27.4": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
